--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "@vercel/node": "^3.1.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
