--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "@vercel/node": "^3.1.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.2"
