--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "ts-node src/seed.ts",
+    "dev": "npx nodemon"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +14,16 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@vercel/node": "^3.1.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/validatorjs": "^3.15.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
