--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node src/seed.ts",
-    "dev": "npx nodemon"
+    "dev": "npx nodemon",
+    "build": "tsc && prisma generate"
   },
   "keywords": [],
   "author": "",
