--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node src/seed.ts",
     "dev": "npx nodemon",
-    "build": "tsc && prisma generate"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
