feat: add logout, get detail user, get self detail user

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-patient-darkness-a4mka64a-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="g2AhxLoHE5nf"
 POSTGRES_DATABASE="verceldb"
+
+JWT_TOKEN="9347eae5-98e6-41a6-adbb-d6fb89808da1"
+JWT_REFRESH_TOKEN="beac14bc-064c-407e-833d-9d230743282c"
