--- a/.env
+++ b/.env
@@ -1,17 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+POSTGRES_URL=postgresql://postgres:admin@localhost:5432/volunpath
+PORT=7000
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-POSTGRES_URL="postgres://default:g2AhxLoHE5nf@ep-patient-darkness-a4mka64a-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:g2AhxLoHE5nf@ep-patient-darkness-a4mka64a-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:g2AhxLoHE5nf@ep-patient-darkness-a4mka64a-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:g2AhxLoHE5nf@ep-patient-darkness-a4mka64a.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-patient-darkness-a4mka64a-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="g2AhxLoHE5nf"
-POSTGRES_DATABASE="verceldb"
-
-JWT_TOKEN="9347eae5-98e6-41a6-adbb-d6fb89808da1"
-JWT_REFRESH_TOKEN="beac14bc-064c-407e-833d-9d230743282c"
+JWT_TOKEN=9347eae5-98e6-41a6-adbb-d6fb89808da1
+JWT_REFRESH_TOKEN=beac14bc-064c-407e-833d-9d230743282c
