--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ PORT=
 
 JWT_TOKEN=
 JWT_REFRESH_TOKEN=
+
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
