--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node src/seed.ts",
     "dev": "npx nodemon",
-    "postinstall": "prisma generate && prisma migrate deploy"
+    "postinstall": "prisma generate && prisma migrate deploy && npm run seed"
   },
   "keywords": [],
   "author": "",
@@ -16,18 +16,24 @@
     "@prisma/client": "^5.14.0",
     "@vercel/node": "^3.1.5",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.2",
     "prisma": "^5.14.0",
+    "uuid": "^9.0.1",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
+    "@types/uuid": "^9.0.8",
     "@types/validatorjs": "^3.15.5",
     "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
