--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node src/seed.ts",
     "dev": "npx nodemon",
-    "postinstall": "prisma generate && prisma migrate reset --force --skip-seed && prisma migrate deploy && npm run seed"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "@vercel/node": "^3.1.5",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
