--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+       "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    },
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@vercel/node": "^3.1.5",
@@ -34,11 +37,11 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.9",
     "@types/uuid": "^9.0.8",
     "@types/validatorjs": "^3.15.5",
     "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.3"
   }
 }
